blackjack: fix dealer system and implemented JOptionPane.showMessageDialog()